--- a/projects/storefront/src/app/shared/components/product-listing/product-listing.component.scss
+++ b/projects/storefront/src/app/shared/components/product-listing/product-listing.component.scss
@@ -497,7 +497,7 @@
 .pagination-container {
   display: flex;
   justify-content: center;
-  margin-top: var(--spacing-lg);
+  margin-top: 80px;
   margin-bottom: var(--spacing-xxl);
 }
 
